cros: Lower the priority for wallpaper controller task runner

Bug: 910409
Change-Id: I7c9a65ccb5e6eb11e2e3f600cef3ba13fe37ee82
Reviewed-on: https://chromium-review.googlesource.com/c/1356240
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612692}
Former-commit-id: b4c77a952469bba2a71a17bb08a738cb84bab41a